force-app/main/default/objects/Pricing_Plan__c/Pricing_Plan__c.object-meta.xml
<CustomObject>
    <description>Subscription pricing plan.</description>
    <label>Pricing Plan</label>
    <nameField>
        <label>Pricing Plans Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>