force-app/main/default/objects/Pricing_Plan__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <description>The name of the product associated with this pricing plan</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>