force-app/main/default/objects/Pricing_Plan__c/fields/Recurrency_Type__c.field-meta.xml
<CustomField>
    <fullName>Recurrency_Type__c</fullName>
    <label>Recurrency Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Recurrency_Type</valueSetName>
    </valueSet>
</CustomField>