force-app/main/default/objects/Pricing_Plan__c/fields/Stripe_Price_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Price_ID__c</fullName>
    <externalId>true</externalId>
    <label>Stripe Price ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>