force-app/main/default/objects/Pricing_Plan__c/fields/Stripe_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stripe Subscription</label>
    <referenceTo>Stripe_Subscription__c</referenceTo>
    <relationshipLabel>Pricing Plans</relationshipLabel>
    <relationshipName>Pricing_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>